# airready

./: .gitignore  README.md  index.html  llms.txt  pyproject.toml  requirements.txt  robots.txt  sitemap.xml  vercel.json
api/: badge.py  scan.py
guides/: index.html
guides/canonical/: index.html
guides/h1/: index.html
guides/llms-txt/: index.html
guides/meta-description/: index.html
guides/open-graph/: index.html
guides/page-title/: index.html
guides/robots-ai/: index.html
guides/server-rendered/: index.html
guides/sitemap/: index.html
guides/structured-data/: index.html
leaderboard/: index.html
src/airready/: __init__.py  cli.py  core.py  fetch.py
tests/: test_checks.py  test_cli_gate.py
